tests/ok/labeled-break.ari
fn main() -> i64 {
  var outer_count = 0;
  outer: while outer_count < 4 {
    var inner_count = 0;
    while inner_count < 4 {
      if outer_count == 2 {
        break outer;
      }
      inner_count = inner_count + 1;
    }
    outer_count = outer_count + 1;
  }
  return outer_count;
}
